Started CSS formatting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,9 @@
   		<input type="datetime-local" name="state_time">
   		<input type="submit">
   	</form>
+
+  	<ul class="container">
+  	</ul>
   </main>
   <script src="./src/index.js"></script>
 </body>
