login feature basics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
   <main>
-  	<form>
+  	<form class="new-trip">
 		<label>Destination</label>
 		<select name="destination">
-			<option value="tweed">Tweed</option>
-			<option value="bdl">BDL</option>
-			<option value="lga">LGA</option>
-			<option value="jfk">JFK</option>
-			<option value="ewr">EWR</option>
-			<option value="other">Other</option>
+			<option value="Tweed">Tweed</option>
+			<option value="BDL">BDL</option>
+			<option value="LGA">LGA</option>
+			<option value="JFK">JFK</option>
+			<option value="EWR">EWR</option>
+			<option value="Other">Other</option>
 		</select>
   		<!-- <input type="text" name="destination" required> -->
   		<label>Address</label>
@@ -32,6 +32,7 @@
   	<ul class="container">
   	</ul>
   </main>
+  <script src="./src/functions.js"></script>
   <script src="./src/index.js"></script>
 </body>
 </html>
