--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,18 +4,19 @@
   <title>BoolaPool</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href= "styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
   <main>
   	<form>
 		<label>Destination</label>
 		<select name="destination">
-			<option value="tweed">Tweed</option>
-			<option value="bdl">BDL</option>
-			<option value="lga">LGA</option>
-			<option value="jfk">JFK</option>
-			<option value="ewr">EWR</option>
-			<option value="other">Other</option>
+			<option value="Tweed">Tweed</option>
+			<option value="BDL">BDL</option>
+			<option value="LGA">LGA</option>
+			<option value="JFK">JFK</option>
+			<option value="EWR">EWR</option>
+			<option value="Other">Other</option>
 		</select>
   		<!-- <input type="text" name="destination" required> -->
   		<label>Address</label>
@@ -29,9 +30,25 @@
   		<input type="submit">
   	</form>
 
+  	<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Destination</th>
+      <th scope="col">Address</th>
+      <th scope="col">Time</th>
+      <th scope="col">Capacity</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
+
   	<ul class="container">
   	</ul>
   </main>
   <script src="./src/index.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
