made join trip feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,8 @@
       <th scope="col">Destination</th>
       <th scope="col">Address</th>
       <th scope="col">Time</th>
-      <th scope="col">Capacity</th>
+	  <th scope="col">Capacity</th>
+	  <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
