--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+
+  <div class="login">
+  </div>
+
   <main>
   	<form class="new-trip">
 		<label>Destination</label>
@@ -31,20 +35,21 @@
   	</form>
 
   	<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Destination</th>
-      <th scope="col">Address</th>
-      <th scope="col">Time</th>
-      <th scope="col">Capacity</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
+      <thead>
+        <tr>
+          <th scope="col">Destination</th>
+          <th scope="col">Address</th>
+          <th scope="col">Time</th>
+          <th scope="col">Capacity</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
 
-  	<ul class="container">
-  	</ul>
+    <div class="button">
+    </div>
+
   </main>
   <script src="./src/functions.js"></script>
   <script src="./src/index.js"></script>
