--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-light bg-light mb-5">
+	<nav class="navbar navbar-light bg-light">
 		<div class="d-flex align-items-end btn-toolbar">
 			<div class="btn btn-outline-primary" id="all">
 					View All Trip Requests
@@ -20,6 +20,21 @@
 	</div>
 
 	<main>
+		<div class="home-text">
+			<h1>Welcome to BoolaPool!</h1>
+			<h3>Connect with students who, like you, have places to be!</h3>
+			<br>
+			<br>
+			<select>
+				<option value="" disabled selected>Where do you want to go?</option>
+				<option value="Tweed">Tweed</option>
+                <option value="BDL">BDL</option>
+                <option value="LGA">LGA</option>
+                <option value="JFK">JFK</option>
+                <option value="EWR">EWR</option>
+                <option value="Other">Other</option>
+			</select>
+		</div>
   	</main>
   <script src="./src/functions.js"></script>
   <script src="./src/index.js"></script>
