--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-light bg-light mb-5">
+	<nav class="navbar navbar-light bg-light">
 		<div class="d-flex align-items-end btn-toolbar">
 			<div class="btn btn-outline-primary" id="all">
 					View All Trip Requests
