--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
 
 	<nav class="navbar navbar-light bg-light">
 		<div class="d-flex align-items-end btn-toolbar">
+			<div class="btn btn-outline-primary" id="home">
+					Home
+			</div>
 			<div class="btn btn-outline-primary" id="all">
 					View All Trip Requests
 			</div>
