Functioning sign up, axing go back

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
  				<input type="submit" value="Log In">
 			</form>
  			<div class="signup-link">
- 				<a href="" class="sign-up">Don't have an account? Sign up here!</a>
+ 				<a href="" class="sign-up" id="trigger" onclick="ani()">Don't have an account? Sign up here!</a>
 			</div>
           </div>
         </div>
