going to yale feature almost working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,11 @@
 			<div class="btn btn-outline" id="home">
 					Home
 			</div>
-			<div class="btn btn-outline" id="all">
-					View All Trip Requests
+			<div class="btn btn-outline" id="all_destination">
+					View All Trip Requests From Yale
+			</div>
+			<div class="btn btn-outline" id="all_origin">
+					View All Trip Requests To Yale
 			</div>
 		</div>
 	</nav>
