Fixed invalid login error

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,10 +14,10 @@
 					Home
 			</div>
 			<div class="btn btn-outline" id="all_destination">
-					View All Trip Requests From Yale
+					Trips From Yale
 			</div>
 			<div class="btn btn-outline" id="all_origin">
-					View All Trip Requests To Yale
+					Trips To Yale
 			</div>
 		</div>
 	</nav>
