--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href= "styles.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);">
+<body>
 
 	<nav class="navbar navbar-light bg-nav">
 		<div class="d-flex align-items-end btn-toolbar">
